--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
@@ -68,19 +69,64 @@
 		</div>
 		</div>
 	</div>
-	<div class="features-up-grid">
+	<div class="features-green-grid">
 		<div class="row">
-			<div class="col-sm-4 col-xs-12 left-up text-center">
+			<div class="col-sm-4 col-xs-12 text text-center">
 				<h3>It's all about</h3>
 				<h1>Fitness first</h1>
 				<img src="http://i63.tinypic.com/33jsn5y.png" alt="grey-icon">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br> Ut enim ad minim veniam, quis nostrud.</p>
 				<a href="#" target="_blank">Read more</a>
 			</div>
-			<div class="col-sm-8 col-xs-12 right-up">
+			<div class="col-sm-8 col-xs-12 image image-up">
 				<div class="right-up-text">
 				<p>Active Users <span class="number">(34)</span></p><img src="http://i64.tinypic.com/14o7pls.png" alt="red-icon">
 				</div>
+			</div>
+		</div>
+	</div>
+	<div class="features-green-grid">
+		<div class="row">
+			<div class="col-sm-8 col-xs-12 image image-down">
+				<div class="left-down-text">
+					<p>Product Used (658)</p><img src="http://i64.tinypic.com/14o7pls.png" alt="red-icon">
+				</div>
+			</div>
+			<div class="col-sm-4 col-xs-12 text text-center">
+					<h3>Love</h3>
+					<h1>Your Body</h1>
+					<img src="http://i63.tinypic.com/33jsn5y.png" alt="grey-icon">
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br> Ut enim ad minim veniam, quis nostrud.</p>
+					<a href="#" target="_blank">Read more</a>
+			</div>
+		</div>
+	</div>
+</section>
+<section class="red-features">
+	<div class="features-red-grid">
+		<div class="row">
+			<div class="col-sm-4 col-xs-12 running grid">
+			</div>
+			<div class="col-sm-8 col-xs-12 surfing grid">
+				<div class="date">
+					<p>24th August</p>
+				</div>
+				<div class="slogan">
+					<p>Health & Fitness</p>
+					<img src="http://i66.tinypic.com/2irczc.png" alt="icon">
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-4 col-xs-12 lifestyle-text grid">
+				<h2>Track your</h2>
+				<h1>Lifestyle</h1>
+				<img src="http://i65.tinypic.com/2cg10dd.png">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+			</div>
+			<div class="col-sm-8 col-xs-12 summer-text grid">
+				<h1>Summer of fun</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
 			</div>
 		</div>
 	</div>
