--- a/index.html
+++ b/index.html
@@ -129,8 +129,59 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
 			</div>
 		</div>
+		<div class="row">
+			<div class="col-sm-8 col-xs-12 grid fruit-left">
+			</div>
+			<div class="col-sm-4 col-xs-12 grid fruit-right">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm-8 col-xs-12 yourself-text grid">
+				<h2>Track your</h2>
+				<h1>Get Involved in Yourself</h1>
+				<img src="http://i66.tinypic.com/32zi5hy.png">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud. Exea commodo consequeat. Duis aute irure dolor in reprehenderit in voluptate velit esse collumdolcre eu fugiat nulla pariatur.</p>
+			</div>
+			<div class="col-sm-4 col-xs-12 habits-text grid">
+				<h2>Improve your</h2>
+				<h1>Eating Habits</h1>
+				<img src="http://i68.tinypic.com/2qdv9d3.png">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.</p>
+			</div>
+		</div>
 	</div>
 </section>
+<section class="banner">
+	<div class="big-slogan">
+		<h1>We launch leaders with big ideas</h1>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+	</div>
+	<img src="http://i65.tinypic.com/do9lau.png" alt="shape">
+</section>
+<footer>
+	<div class="row">
+		<div class="col-sm-4 col-xs-12">
+			<h2>Resources</h2>
+			<p>Easily manage your inspiration and work-in-progress by dragging mages into projects and sharable client groups, work-in-progress by dragging images into projects and sharable client group.</p>
+		</div>
+		<div class="col-sm-4 col-xs-12">
+			<h2>About us</h2>
+			<p>Easily manage your inspiration and work-in-progress by dragging mages into projects and sharable client groups, work-in-progress by dragging images into projects and sharable client group.</p>
+		</div>
+		<div class="col-sm-4 col-xs-12">
+			<h2>Stay in touch</h2>
+			<a href="#" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+			<a href="#" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+			<a href="#" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a>
+			<a href="#" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>			
+		</div>
+	</div>
+	<div class="newsletter">
+		<input type="text" placeholder="Name" name="name" required>
+		<input type="text" placeholder="Email address" name="mail" required>
+		<input type="submit" value="Join Newsletter">
+	</div>
+</footer>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/script.js"></script>
 </body>
