--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 			<h2>About us</h2>
 			<p>Easily manage your inspiration and work-in-progress by dragging mages into projects and sharable client groups, work-in-progress by dragging images into projects and sharable client group.</p>
 		</div>
-		<div class="col-sm-4 col-xs-12">
+		<div class="col-sm-4 col-xs-12 social">
 			<h2>Stay in touch</h2>
 			<a href="#" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
 			<a href="#" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
